src/test/examples/invalid/semanticErr/multiple/messyExpr.wacc
# long expression with multiple frontend.type mismatches

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin

  int x = ((1 + true) * (2 - false)) || 17 ;
  exit x

end
